# rtd-tutorial

./: .readthedocs.yaml  setup.cfg  setup.py
docs/source/: conf.py  helloworld.puml  index.rst
