[metadata]
name = lumache
version = 0.1.dev0
description = Foobar
long_description = Foo Bar

license = BSD 3-Clause License
license_file = LICENSE

author = Bar Bar
author_email = zamzam@foobar.com



[options]
packages = find:
# The requires below have been used as reference baseline for detd's release
# tests and security checks.
# Modify these requires at your own risk!
python_requires = >=3.8
install_requires =
       protobuf ==3.21.12



[coverage:run]
omit=/usr/lib/python3/dist-packages/*, tests/*
concurrency = multiprocessing
parallel = True
